Updated for police killings problem

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -18,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def load_data(filename):\n",
@@ -56,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def prediction_step(x_t_prev, sigma_sq_t_prev):\n",
@@ -82,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def correction_step(x_bar_t, z_t, sigma_sq_bar_t, sigma_sq_z):\n",
@@ -117,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def wrap_to_360(angle):\n",
@@ -128,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def wrap_to_360(angle):\n",
@@ -167,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read in data\n",
@@ -228,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#def prediction_step(x_t_prev, sigma_sq_t_prev):\n",
@@ -489,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def vehicleSpeed(x, y, timestep = 0.5):\n",
@@ -539,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#loading in all data\n",
@@ -549,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#defining varialbes for all needed data\n",
@@ -722,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos_area = stats.norm.cdf(0.3, mean_stopped, std_stopped) - stats.norm.cdf(0, mean_stopped, std_stopped)\n",
@@ -1032,7 +1056,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bayesFilter_step(prevState, speed, model_means, model_stds, epsilon = 1e-9):\n",
@@ -1073,7 +1099,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bayesFilter(speeds, model_means, model_stds, initialStates = None, timestep = 0.5, epsilon = 1e-9):\n",
@@ -1099,7 +1127,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_means = np.array([mean_stopped, mean_moving])\n",
@@ -1109,7 +1139,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stateProbs_ego = bayesFilter(speed_ego, model_means, model_stds)                          "
@@ -1153,7 +1185,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stateProbs_v4 = bayesFilter(speed_v4, model_means, model_stds)                          "
@@ -1288,7 +1322,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stateProbs_v1 = bayesFilter(speed_v1, model_means, model_stds)\n",
@@ -1476,16 +1512,382 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Problem 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prob_white = .634\n",
+    "prob_hispanic = .153\n",
+    "prob_black = .134\n",
+    "prob_asian = .059\n",
+    "prob_other = .02\n",
+    "\n",
+    "probUSRace = [prob_white, prob_black, prob_hispanic, prob_asian]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policeData = pd.read_csv('police_killings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policeData = policeData[[\"Victim\\'s race\", \"Unarmed\", \"Victim\\'s age\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "policeData = policeData.dropna(axis='rows')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data sets\n",
+    "armed_alleg = policeData.loc[policeData['Unarmed'] == 'Allegedly Armed']\n",
+    "#armed = policeData.loc[policeData['Unarmed'] == 'armed']\n",
+    "unclear_arm = policeData.loc[policeData['Unarmed'] == 'Unclear']\n",
+    "unarm = policeData.loc[policeData['Unarmed'] == 'Unarmed']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "armedCount = (armed_alleg.count())[0]\n",
+    "unclearCount = (unclear_arm.count())[0]\n",
+    "unarmCount = (unarm.count())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "armedProb = armed_alleg['Victim\\'s race'].value_counts() / armedCount\n",
+    "unclearProb = unclear_arm['Victim\\'s race'].value_counts() / unclearCount\n",
+    "unarmProb = unarm['Victim\\'s race'].value_counts() / unarmCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Victim's race</th>\n",
+       "      <th>Unarmed</th>\n",
+       "      <th>Victim's age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>White</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Black</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Black</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>White</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7657</th>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7658</th>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7659</th>\n",
+       "      <td>Black</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7660</th>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7661</th>\n",
+       "      <td>White</td>\n",
+       "      <td>Allegedly Armed</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5383 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Victim's race          Unarmed Victim's age\n",
+       "0            White  Allegedly Armed           28\n",
+       "2            Black  Allegedly Armed           57\n",
+       "3            Black  Allegedly Armed           23\n",
+       "5            White  Allegedly Armed           49\n",
+       "10        Hispanic  Allegedly Armed           50\n",
+       "...            ...              ...          ...\n",
+       "7657      Hispanic  Allegedly Armed           26\n",
+       "7658      Hispanic  Allegedly Armed           49\n",
+       "7659         Black  Allegedly Armed           31\n",
+       "7660      Hispanic  Allegedly Armed           21\n",
+       "7661         White  Allegedly Armed           21\n",
+       "\n",
+       "[5383 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "armed_alleg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "White               0.457366\n",
+       "Black               0.242058\n",
+       "Hispanic            0.167193\n",
+       "Unknown race        0.087498\n",
+       "Asian               0.017277\n",
+       "Native American     0.014304\n",
+       "Unknown Race        0.008917\n",
+       "Pacific Islander    0.005387\n",
+       "Name: Victim's race, dtype: float64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "armedProb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "White               0.389325\n",
+       "Black               0.238619\n",
+       "Hispanic            0.207221\n",
+       "Unknown race        0.106750\n",
+       "Native American     0.031397\n",
+       "Asian               0.014129\n",
+       "Unknown Race        0.007849\n",
+       "Pacific Islander    0.004710\n",
+       "Name: Victim's race, dtype: float64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unclearProb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "White               0.422035\n",
+       "Black               0.313725\n",
+       "Hispanic            0.187675\n",
+       "Unknown race        0.046685\n",
+       "Asian               0.011204\n",
+       "Native American     0.009337\n",
+       "Unknown Race        0.005602\n",
+       "Pacific Islander    0.003735\n",
+       "Name: Victim's race, dtype: float64"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unarmProb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "races = ['White', 'Black', 'Hispanic', 'Asian']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predStep(races, probUSRace, armedProb, unclearProb, unarmProb):\n",
+    "    \n",
+    "    predProbArmed = np.zeros(len(races))\n",
+    "    predProbUnarm = np.zeros(len(races))\n",
+    "    \n",
+    "    for i in range(len(races)):\n",
+    "        race = races[i]\n",
+    "        \n",
+    "        # Using eq given in part C\n",
+    "        predProbArmed[i] = armedProb[race] * 0.8 + unclearProb[race] * 0.2\n",
+    "        predProbUnarm[i] = unarmProb[race] * 0.8 + unclearProb[race] * 0.2\n",
+    "        \n",
+    "    return predProbArmed, predProbUnarm\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.44375762, 0.24137037, 0.17519868, 0.01664703]),\n",
+       " array([0.41549338, 0.2987041 , 0.19158433, 0.01178933]))"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predStep(races, probUSRace, armedProb, unclearProb, unarmProb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "e190",
    "language": "python",
-   "name": "python3"
+   "name": "e190"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1497,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
